--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
     </tr>
     <tr>
         <td>EMAIL</td>
-        <td>tharun.r2022@vitstudent.ac.in</td>        
+        <td>abcd@vitstudent.ac.in</td>        
     </tr>
     <tr>
         <td>PHONE</td>
-        <td>+91 98408 52582</td>        
+        <td>+91 99999 99999</td>        
     </tr>
     <tr>
         <td>ADDRESS</td>
-        <td>D/17/10 , Adyar Avenue, IIT Madras, Chennai 600036</td>        
+        <td>H 567 ABC STREET XYZ CITY PQR 602345 </td>        
     </tr>
 
 </table>
