--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <table>
                 <tr><td>HAPPY -</td> <td> SAD - </td>
                 </tr>
-                <tr><td><img src="C:\Users\Tharun\Desktop\Task 1\HAPPY.jpg" alt="HAPPY" height="300" width="300"></td>              
+                <tr><td><img src="HAPPY.jpg" alt="HAPPY" height="300" width="300"></td>              
               
-                <td><img src="C:\Users\Tharun\Desktop\Task 1\SAD.jpeg" alt="SAD" height="300" width="300"></td>
+                <td><img src="SAD.jpeg" alt="SAD" height="300" width="300"></td>
             </tr>
             </table>
     </div>
@@ -83,10 +83,10 @@
         <p>IIT Madras occupies a 620 acres campus that was formerly part of the adjoining Guindy National Park.</p> <p>
             Much of the campus is a protected forest and is a home to chital (spotted deer), Endangered Species of Blackbuck deer and other wildlife.</p>
         <p>There are over 100 species of birds. We can spot monkeys, civets, monitor lizard etc</p>
-        <img src="C:\Users\Tharun\Desktop\Task 1\deer.png" alt="DEER@IITM" height="300" width="300">
-        <img src="C:\Users\Tharun\Desktop\Task 1\monkey.jpg" alt="MONKEY@IITM" height="300" width="300">
-        <img src="C:\Users\Tharun\Desktop\Task 1\black-buck.jpg" alt="BLACKBUCK@IITM" height="300" width="300">
-        <img src="C:\Users\Tharun\Desktop\Task 1\bird.jpeg" alt="BIRD@IITM" height="300" width="300">
+        <img src="deer.png" alt="DEER@IITM" height="300" width="300">
+        <img src="monkey.jpg" alt="MONKEY@IITM" height="300" width="300">
+        <img src="black-buck.jpg" alt="BLACKBUCK@IITM" height="300" width="300">
+        <img src="bird.jpeg" alt="BIRD@IITM" height="300" width="300">
     </div>
     <h2>CONTACT INFORMATION</h2>
     <a href="contact.html" target="_self">CLICK HERE</a>
